/*
 * MIT License
 * 
 * Copyright (c) 2019 Choko (choko@curioswitch.org)
 * 
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 * 
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 * 
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */

syntax = "proto3";

package org.curioswitch.cafemap.api;

option java_package = "org.curioswitch.cafemap.api";
option java_multiple_files = true;

// A LatLng is a point in geographical coordinates: latitude and longitude.
message LatLng {
  // The latitude of a point, in degrees. Must be in the range [-90, 90].
  double latitude = 1;

  // The longitude of a point, in degrees. Must be in the range [-180, 180].
  double longitude = 2;
}

// A rectangle in geographical coordinates, including one that crosses the 180 degrees longitudinal
// meridian.
//
// See: https://developers.google.com/maps/documentation/javascript/reference/coordinates#LatLngBounds
message LatLngBounds {
  // The `LatLng` of the southwest corner of the bounding box.
  LatLng south_west = 1;

  // The `LatLng` of the northeast corner of the bounding box.
  LatLng north_east = 2;
}

// A request for the `GetPlaces` method.
message GetPlacesRequest {
  // The viewport to get places for. Only places falling inside the viewport will be returned.
  LatLngBounds viewport = 1;
}

// A place, typically rendered on a map.
message Place {
  // The position of the place.
  LatLng position = 1;

  // The name of the place.
  string name = 2;

  // The location ID of this place on Instagram. Not set if this location was not found on
  // Instagram.
  string instagram_id = 3;
}

// A response for the `GetPlaces` method.
message GetPlacesResponse {
  // Places corresponding to `GetPlacesRequest`.
  repeated Place place = 1;
}

service CafeMapService {
  // Returns a list of places.
  rpc GetPlaces (GetPlacesRequest) returns (GetPlacesResponse);
}
